--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "verbatimModuleSyntax": true,
     "incremental": true,
     "plugins": [
       {
